2004-11-19  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* restore-src/amrestore.c: Undo patch from 2004-11-11, it break
	  the file: dirver.

2004-11-19  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: Remove trace.

2004-11-16  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/diskfile.c: Compilation fix.

2004-11-16  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/conffile.c: Parse displayunit,
	  new fonction getcont_unit_divisor().
	* server-src/conffile.h: Prototype of getcont_unit_divisor().
	* server-src/amcheck.c: Use displayunit to display holding disk size.
	* server-src/amstatus.pl.in: Use displayunit to display dump size.
	* server-src/reporter.c: use displayunit to display dump size.
	* Document displayunit.

2004-11-16  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/reporter.c: Change 'Daily' for 'Incr.'.

2004-11-15  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in Fix for level -1.

2004-11-15  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Daniel Widyono <widyono@seas.upenn.edu>

	* changer-src/chg-zd-mtx.sh.in: Fix for library with barcode.

2004-11-11  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* restore-src/amrestore.c: Read empty file.

2004-11-10  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/tapetype.c: Use new tape.

2004-11-08  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: Display partial estimate.

2004-11-08  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/diskfile.c (read_diskline): A spindle must be numerical.

2004-10-21  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/holding.c (rename_tmp_holding): Always rename files.

2004-10-21  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driver.c: Print message when too many retry.