@@ -25,7 +25,7 @@
  *			   University of Maryland at College Park
  */
 /*
- * $Id: amadmin.c,v 1.96 2004/09/17 11:54:48 martinea Exp $
+ * $Id: amadmin.c,v 1.97 2004/11/19 13:21:17 martinea Exp $
  *
  * controlling process for the Amanda backup system
  */
@@ -78,6 +78,8 @@ void show_version P((int argc, char **argv));
 static void check_dumpuser P((void));
 
 static char *conf_tapelist = NULL;
+static char *displayunit;
+static long int unitdivisor;
 
 static const struct {
     const char *name;
@@ -198,6 +200,9 @@ int main(argc, argv)
     if(open_infofile(conf_infofile))
 	error("could not open info db \"%s\"", conf_infofile);
     amfree(conf_infofile);
+
+    displayunit = getconf_str(CNF_DISPLAYUNIT);
+    unitdivisor = getcont_unit_divisor();
 
     for (i = 0; i < NCMDS; i++)
 	if (strcmp(argv[2], cmdtab[i].name) == 0) {
@@ -858,18 +863,18 @@ char **argv;
 	    continue;
 	}
 	sp[distinct].disks++;
-	sp[distinct].origsize += info.inf[0].size;
-	sp[distinct].outsize += info.inf[0].csize;
+	sp[distinct].origsize += info.inf[0].size/unitdivisor;
+	sp[distinct].outsize += info.inf[0].csize/unitdivisor;
 
 	sp[balance].disks++;
 	if(dp->dumpcycle == 0) {
-	    sp[balance].origsize += info.inf[0].size * runs_per_cycle;
-	    sp[balance].outsize += info.inf[0].csize * runs_per_cycle;
+	    sp[balance].origsize += (info.inf[0].size/unitdivisor) * runs_per_cycle;
+	    sp[balance].outsize += (info.inf[0].csize/unitdivisor) * runs_per_cycle;
 	}
 	else {
-	    sp[balance].origsize += info.inf[0].size *
+	    sp[balance].origsize += (info.inf[0].size/unitdivisor) *
 				    (conf_dumpcycle / dp->dumpcycle);
-	    sp[balance].outsize += info.inf[0].csize *
+	    sp[balance].outsize += (info.inf[0].csize/unitdivisor) *
 				   (conf_dumpcycle / dp->dumpcycle);
 	}
 
@@ -892,13 +897,13 @@ char **argv;
 	    }
 	    
 	    sp[seq].disks++;
-	    sp[seq].origsize += info.inf[0].size;
-	    sp[seq].outsize += info.inf[0].csize;
+	    sp[seq].origsize += info.inf[0].size/unitdivisor;
+	    sp[seq].outsize += info.inf[0].csize/unitdivisor;
 
 	    if(seq < later) {
 		sp[total].disks++;
-		sp[total].origsize += info.inf[0].size;
-		sp[total].outsize += info.inf[0].csize;
+		sp[total].origsize += info.inf[0].size/unitdivisor;
+		sp[total].outsize += info.inf[0].csize/unitdivisor;
 	    }
 	    
 	    /* See, if there's another run in this dumpcycle */
@@ -923,7 +928,8 @@ char **argv;
     }
 
     empty_day = 0;
-    printf("\n due-date  #fs    orig KB     out KB   balance\n");
+    printf("\n due-date  #fs    orig %cB     out %cB   balance\n",
+	   displayunit[0], displayunit[0]);
     printf("----------------------------------------------\n");
     for(seq = 0; seq < later; seq++) {
 	if(sp[seq].disks == 0 &&
